--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -3,9 +3,9 @@
     "logo": "shopify:\/\/shop_images\/logo.svg",
     "logo_width": 300,
     "favicon": "shopify:\/\/shop_images\/favicon.svg",
-    "type_header_font": "assistant_n4",
+    "type_header_font": "Alte Haas Grotesk",
     "heading_scale": 100,
-    "type_body_font": "assistant_n4",
+    "type_body_font": "Alte Haas Grotesk",
     "body_scale": 100,
     "page_width": 1260,
     "spacing_sections": 0,
@@ -264,9 +264,9 @@
           }
         }
       },
-      "type_header_font": "assistant_n4",
+      "type_header_font": "Alte Haas Grotesk",
       "heading_scale": 100,
-      "type_body_font": "assistant_n4",
+      "type_body_font": "Alte Haas Grotesk",
       "body_scale": 100,
       "page_width": 1200,
       "spacing_sections": 0,
